[package]
name = "pallet-registry"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
registry-core = { path = "../../crates/registry-core", default-features = false }
futarchy-primitives = { path = "../../crates/futarchy-primitives", default-features = false }
parity-scale-codec = { version = "3.7.5", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = ["registry-core/std", 
  "futarchy-primitives/std",
  "parity-scale-codec/std",
  "scale-info/std",
]
runtime-benchmarks = []
