[package]
name = "pallet-welfare"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# `serde` on in all builds: the genesis config's `MetricSpec` must be
# serde-round-trippable inside the no_std Wasm runtime (GenesisBuilder API).
welfare-core = { path = "../../crates/welfare-core", default-features = false, features = ["serde"] }
futarchy-fixed = { path = "../../crates/futarchy-fixed", default-features = false }
futarchy-primitives = { path = "../../crates/futarchy-primitives", default-features = false }
parity-scale-codec = { version = "3.7.5", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
# FRAME on the `polkadot-stable2603` pins (workspace-managed versions, 01 §9).
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }

[dev-dependencies]
sp-core = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
  "frame-benchmarking?/std",
  "frame-support/std",
  "frame-system/std",
  "futarchy-fixed/std",
  "futarchy-primitives/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "sp-runtime/std",
  "welfare-core/std",
]
runtime-benchmarks = [
  "dep:frame-benchmarking",
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "welfare-core/runtime-benchmarks",
]
try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "sp-runtime/try-runtime",
]
