[package]
name = "bleavit-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
futarchy-primitives = { path = "../../crates/futarchy-primitives", default-features = false }
# B1 is the frame-free composition *model*: it consumes the frame-free
# `origins-core` directly (A4 made `pallet-origins` a real FRAME pallet; the
# runtime-level `construct_runtime!`/`BaseCallFilter` wiring over it is B1a).
origins-core = { path = "../../crates/origins-core", default-features = false }
parity-scale-codec = { version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
  "futarchy-primitives/std",
  "origins-core/std",
  "parity-scale-codec/std",
  "scale-info/std",
]
runtime-benchmarks = []
