[package]
name = "bleavit-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
# --- Local protocol crates (B1a wires the ten production FRAME pallets; the
# --- A8/A11 pallets are still core scaffolds and join construct_runtime! later).
futarchy-primitives = { path = "../../crates/futarchy-primitives", default-features = false }
origins-core = { path = "../../crates/origins-core", default-features = false }
pallet-constitution = { path = "../../pallets/constitution", default-features = false }
pallet-conditional-ledger = { path = "../../pallets/conditional-ledger", default-features = false }
pallet-market = { path = "../../pallets/market", default-features = false }
pallet-origins = { path = "../../pallets/origins", default-features = false }
pallet-oracle = { path = "../../pallets/oracle", default-features = false }
pallet-registry = { path = "../../pallets/registry", default-features = false }
pallet-futarchy-treasury = { path = "../../pallets/futarchy-treasury", default-features = false }
pallet-guardian = { path = "../../pallets/guardian", default-features = false }
pallet-attestor = { path = "../../pallets/attestor", default-features = false }
pallet-welfare = { path = "../../pallets/welfare", default-features = false }
registry-core = { path = "../../crates/registry-core", default-features = false }

parity-scale-codec = { version = "3.7.5", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# --- FRAME core (polkadot-stable2603 exact pins from the workspace table).
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-executive = { workspace = true }
frame-metadata-hash-extension = { workspace = true }
frame-system-rpc-runtime-api = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-try-runtime = { workspace = true, optional = true }

# --- Standard pallets (01 §5.1).
pallet-timestamp = { workspace = true }
pallet-balances = { workspace = true }
pallet-assets = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-asset-tx-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
pallet-referenda = { workspace = true }
pallet-conviction-voting = { workspace = true }
pallet-preimage = { workspace = true }
pallet-scheduler = { workspace = true }
pallet-utility = { workspace = true }
pallet-proxy = { workspace = true }
pallet-multisig = { workspace = true }
pallet-migrations = { workspace = true }
pallet-sudo = { workspace = true }
pallet-session = { workspace = true }
pallet-aura = { workspace = true }
pallet-authorship = { workspace = true }
pallet-collator-selection = { workspace = true }
pallet-message-queue = { workspace = true }
pallet-xcm = { workspace = true }

# --- Cumulus (01 §5.1 parachain base; XCM policy is B4 — B1a is fail-closed).
cumulus-pallet-parachain-system = { workspace = true }
cumulus-pallet-xcmp-queue = { workspace = true }
cumulus-pallet-xcm = { workspace = true }
cumulus-pallet-aura-ext = { workspace = true }
cumulus-primitives-core = { workspace = true }
cumulus-primitives-aura = { workspace = true }
cumulus-primitives-storage-weight-reclaim = { workspace = true }
cumulus-primitives-utility = { workspace = true }
staging-parachain-info = { workspace = true }
parachains-common = { workspace = true }
polkadot-runtime-common = { workspace = true }
staging-xcm = { workspace = true }
staging-xcm-builder = { workspace = true }
staging-xcm-executor = { workspace = true }

# --- Substrate primitives for impl_runtime_apis!/version/genesis.
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-core = { workspace = true }
sp-genesis-builder = { workspace = true }
sp-inherents = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true, features = ["std"] }
sp-keyring = { workspace = true }
sp-tracing = { workspace = true }
cumulus-test-relay-sproof-builder = { workspace = true }
cumulus-primitives-parachain-inherent = { workspace = true }

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
  "cumulus-pallet-aura-ext/std",
  "cumulus-pallet-parachain-system/std",
  "cumulus-pallet-xcm/std",
  "cumulus-pallet-xcmp-queue/std",
  "cumulus-primitives-aura/std",
  "cumulus-primitives-core/std",
  "cumulus-primitives-storage-weight-reclaim/std",
  "cumulus-primitives-utility/std",
  "frame-benchmarking?/std",
  "frame-executive/std",
  "frame-metadata-hash-extension/std",
  "frame-support/std",
  "frame-system-rpc-runtime-api/std",
  "frame-system/std",
  "frame-try-runtime?/std",
  "futarchy-primitives/std",
  "origins-core/std",
  "pallet-asset-tx-payment/std",
  "pallet-assets/std",
  "pallet-attestor/std",
  "pallet-aura/std",
  "pallet-authorship/std",
  "pallet-balances/std",
  "pallet-collator-selection/std",
  "pallet-conditional-ledger/std",
  "pallet-constitution/std",
  "pallet-conviction-voting/std",
  "pallet-futarchy-treasury/std",
  "pallet-guardian/std",
  "pallet-market/std",
  "pallet-message-queue/std",
  "pallet-migrations/std",
  "pallet-multisig/std",
  "pallet-oracle/std",
  "pallet-origins/std",
  "pallet-preimage/std",
  "pallet-proxy/std",
  "pallet-referenda/std",
  "pallet-registry/std",
  "pallet-scheduler/std",
  "pallet-session/std",
  "pallet-sudo/std",
  "pallet-timestamp/std",
  "pallet-transaction-payment-rpc-runtime-api/std",
  "pallet-transaction-payment/std",
  "pallet-utility/std",
  "pallet-welfare/std",
  "registry-core/std",
  "pallet-xcm/std",
  "parachains-common/std",
  "polkadot-runtime-common/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "serde_json/std",
  "sp-api/std",
  "sp-block-builder/std",
  "sp-consensus-aura/std",
  "sp-core/std",
  "sp-genesis-builder/std",
  "sp-inherents/std",
  "sp-offchain/std",
  "sp-runtime/std",
  "sp-session/std",
  "sp-transaction-pool/std",
  "sp-version/std",
  "staging-parachain-info/std",
  "staging-xcm-builder/std",
  "staging-xcm-executor/std",
  "staging-xcm/std",
  "substrate-wasm-builder",
]
runtime-benchmarks = [
  "cumulus-pallet-parachain-system/runtime-benchmarks",
  "cumulus-pallet-xcmp-queue/runtime-benchmarks",
  "cumulus-primitives-core/runtime-benchmarks",
  "cumulus-primitives-utility/runtime-benchmarks",
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "pallet-asset-tx-payment/runtime-benchmarks",
  "pallet-assets/runtime-benchmarks",
  "pallet-attestor/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
  "pallet-collator-selection/runtime-benchmarks",
  "pallet-conditional-ledger/runtime-benchmarks",
  "pallet-constitution/runtime-benchmarks",
  "pallet-conviction-voting/runtime-benchmarks",
  "pallet-futarchy-treasury/runtime-benchmarks",
  "pallet-guardian/runtime-benchmarks",
  "pallet-market/runtime-benchmarks",
  "pallet-message-queue/runtime-benchmarks",
  "pallet-migrations/runtime-benchmarks",
  "pallet-multisig/runtime-benchmarks",
  "pallet-oracle/runtime-benchmarks",
  "pallet-origins/runtime-benchmarks",
  "pallet-preimage/runtime-benchmarks",
  "pallet-proxy/runtime-benchmarks",
  "pallet-referenda/runtime-benchmarks",
  "pallet-registry/runtime-benchmarks",
  "pallet-scheduler/runtime-benchmarks",
  "pallet-session/runtime-benchmarks",
  "pallet-sudo/runtime-benchmarks",
  "pallet-timestamp/runtime-benchmarks",
  "pallet-transaction-payment/runtime-benchmarks",
  "pallet-utility/runtime-benchmarks",
  "pallet-welfare/runtime-benchmarks",
  "pallet-xcm/runtime-benchmarks",
  "parachains-common/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "staging-xcm-builder/runtime-benchmarks",
  "staging-xcm-executor/runtime-benchmarks",
]
try-runtime = [
  "cumulus-pallet-aura-ext/try-runtime",
  "cumulus-pallet-parachain-system/try-runtime",
  "cumulus-pallet-xcm/try-runtime",
  "cumulus-pallet-xcmp-queue/try-runtime",
  "frame-executive/try-runtime",
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "frame-try-runtime/try-runtime",
  "pallet-asset-tx-payment/try-runtime",
  "pallet-assets/try-runtime",
  "pallet-attestor/try-runtime",
  "pallet-aura/try-runtime",
  "pallet-authorship/try-runtime",
  "pallet-balances/try-runtime",
  "pallet-collator-selection/try-runtime",
  "pallet-conditional-ledger/try-runtime",
  "pallet-constitution/try-runtime",
  "pallet-conviction-voting/try-runtime",
  "pallet-futarchy-treasury/try-runtime",
  "pallet-guardian/try-runtime",
  "pallet-market/try-runtime",
  "pallet-message-queue/try-runtime",
  "pallet-migrations/try-runtime",
  "pallet-multisig/try-runtime",
  "pallet-oracle/try-runtime",
  "pallet-origins/try-runtime",
  "pallet-preimage/try-runtime",
  "pallet-proxy/try-runtime",
  "pallet-referenda/try-runtime",
  "pallet-registry/try-runtime",
  "pallet-scheduler/try-runtime",
  "pallet-session/try-runtime",
  "pallet-sudo/try-runtime",
  "pallet-timestamp/try-runtime",
  "pallet-transaction-payment/try-runtime",
  "pallet-utility/try-runtime",
  "pallet-welfare/try-runtime",
  "pallet-xcm/try-runtime",
  "parachains-common/try-runtime",
  "polkadot-runtime-common/try-runtime",
  "sp-runtime/try-runtime",
  "staging-parachain-info/try-runtime",
]
