[package]
name = "bleavit-xcm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
futarchy-primitives = { path = "../../crates/futarchy-primitives", default-features = false }
futarchy-treasury-core = { path = "../../crates/futarchy-treasury-core", default-features = false }
origins-core = { path = "../../crates/origins-core", default-features = false }
pallet-futarchy-treasury = { path = "../../pallets/futarchy-treasury", default-features = false }
pallet-oracle = { path = "../../pallets/oracle", default-features = false }
parity-scale-codec = { version = "3.7.5", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
# FRAME + XCM on the `polkadot-stable2603` pins (workspace-managed versions, 01 §9).
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
staging-xcm = { workspace = true }
staging-xcm-builder = { workspace = true }
staging-xcm-executor = { workspace = true }
pallet-xcm = { workspace = true }
cumulus-primitives-core = { workspace = true }

[dev-dependencies]
pallet-assets = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }
oracle-core = { path = "../../crates/oracle-core", features = ["std"] }
sp-core = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
  "cumulus-primitives-core/std",
  "frame-support/std",
  "frame-system/std",
  "futarchy-primitives/std",
  "futarchy-treasury-core/std",
  "origins-core/std",
  "pallet-futarchy-treasury/std",
  "pallet-oracle/std",
  "pallet-xcm/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "sp-runtime/std",
  "staging-xcm-builder/std",
  "staging-xcm-executor/std",
  "staging-xcm/std",
]
runtime-benchmarks = [
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "futarchy-treasury-core/runtime-benchmarks",
  "pallet-futarchy-treasury/runtime-benchmarks",
  "pallet-oracle/runtime-benchmarks",
  "pallet-xcm/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "staging-xcm-builder/runtime-benchmarks",
  "staging-xcm-executor/runtime-benchmarks",
  "staging-xcm/runtime-benchmarks",
]
try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "pallet-futarchy-treasury/try-runtime",
  "pallet-oracle/try-runtime",
  "pallet-xcm/try-runtime",
  "sp-runtime/try-runtime",
]
